feat: integrate modern protocol importer
